board4 엑셀업로드 테스트 버전 / excelDownloadCommand.java 삭제

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -37,6 +37,11 @@
 		<servlet-name>excelDownload</servlet-name>
 		<servlet-class>kr.co.util.excelDownload</servlet-class>
 	</servlet>
+	
+	<servlet>
+		<servlet-name>excelUpdate</servlet-name>
+		<servlet-class>kr.co.util.excelUpdate</servlet-class>
+	</servlet>
 
 	<servlet-mapping>
 		<servlet-name>travel</servlet-name>
@@ -61,6 +66,11 @@
 	<servlet-mapping>
 		<servlet-name>excelDownload</servlet-name>
 		<url-pattern>/excelDownload</url-pattern>
+	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>excelUpdate</servlet-name>
+		<url-pattern>/excelUpdate</url-pattern>
 	</servlet-mapping>
 
 	<filter>
